--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "softcommerce/module-plenty-amasty-cashondelivery",
     "description": "PlentyMarkets Connector - Amasty Cash On Delivery add-ons.",
     "require": {
-        "php": "~8.0.0||~8.1.0||~8.2.0",
+        "php": "~8.0.0||~8.1.0||~8.2.0||~8.3.0",
         "softcommerce/module-plenty-item-profile": "*",
         "softcommerce/module-plenty-order-profile": "*"
     },
@@ -19,5 +19,5 @@
             "SoftCommerce\\PlentyAmastyCashOnDelivery\\": ""
         }
     },
-    "version": "1.0.3"
+    "version": "1.0.4"
 }
