--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,9 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          name: 1.0.4 [CE|EE|ECE 2.4.0-2.4.7] 25 Apr 2024
-          tag_name: 1.0.4
+          name: 1.0.6 [CE|EE|ECE 2.4.0-2.4.7] 18 Feb 2025
+          tag_name: 1.0.6
           body: |-
-            ### softcommerce/module-plenty-amasty-cashondelivery [1.0.4]
-            - **Compatibility**: Compatibility with PHP 8.3
+            Compatibility with [Optimised stock source assignment](https://github.com/softcommerceltd/mage2plenty-os/issues/48)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
