The metapackage release notes are now properly extracting and formatting the module changes from the CHANGELOG.md file

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "softcommerce/module-plenty-amasty-cashondelivery",
-    "description": "PlentyMarkets Connector - Amasty Cash On Delivery add-ons.",
+    "description": "PlentyONE Connector - Amasty Cash On Delivery add-ons.",
     "require": {
         "php": "~8.0.0||~8.1.0||~8.2.0||~8.3.0||~8.4.0",
         "softcommerce/module-plenty-item-profile": "*",
